Fixed alignment issue on copyright container in footer

--- a/css/queries.css
+++ b/css/queries.css
@@ -71,4 +71,8 @@
   .contact-us {
     padding: 0.5rem;
   }
+
+  .footer__copyright-container {
+    padding-left: 0.5rem;
+  }
 }
